--- a/.github/workflows/release-preview.yml
+++ b/.github/workflows/release-preview.yml
@@ -29,16 +29,19 @@ jobs:
         run: dotnet test DRN.Test/DRN.Test.csproj --configuration Release /p:Version=${VERSION} --no-build --verbosity normal
       - name: Push SharedKernel
         run: |
-          git --no-pager log -1 --format="%n %C(auto)%H  %ai"  >>  DRN.Framework.SharedKernel/PackageDescription
-          dotnet pack DRN.Framework.SharedKernel/DRN.Framework.SharedKernel.csproj --configuration Release /p:Version=${VERSION} --no-build --output .
-          dotnet nuget push DRN.Framework.SharedKernel.${VERSION}.nupkg --skip-duplicate --api-key ${{ secrets.NUGET_TOKEN }} --source https://api.nuget.org/v3/index.json
+          echo "ProjectName=SharedKernel" >> $GITHUB_ENV
+          git --no-pager log -1 --format="%n %C(auto)%H  %ai"  >>  DRN.Framework.${ProjectName}/PACKAGE-DESCRIPTION
+          dotnet pack DRN.Framework.${ProjectName}/DRN.Framework.${ProjectName}.csproj --configuration Release /p:Version=${VERSION} --no-build --output .
+          dotnet nuget push DRN.Framework.${ProjectName}.${VERSION}.nupkg --skip-duplicate --api-key ${{ secrets.NUGET_TOKEN }} --source https://api.nuget.org/v3/index.json
       - name: Push Utils
         run: |
-          git --no-pager log -1 --format="%n %C(auto)%H  %ai"  >>  DRN.Framework.Utils/PackageDescription
-          dotnet pack DRN.Framework.Utils/DRN.Framework.Utils.csproj --configuration Release /p:Version=${VERSION} --no-build --output .
-          dotnet nuget push DRN.Framework.Utils.${VERSION}.nupkg --skip-duplicate --api-key ${{ secrets.NUGET_TOKEN }} --source https://api.nuget.org/v3/index.json
+          echo "ProjectName=Utils" >> $GITHUB_ENV
+          git --no-pager log -1 --format="%n %C(auto)%H  %ai"  >>  DRN.Framework.${ProjectName}/PACKAGE-DESCRIPTION
+          dotnet pack DRN.Framework.${ProjectName}/DRN.Framework.${ProjectName}.csproj --configuration Release /p:Version=${VERSION} --no-build --output .
+          dotnet nuget push DRN.Framework.${ProjectName}.${VERSION}.nupkg --skip-duplicate --api-key ${{ secrets.NUGET_TOKEN }} --source https://api.nuget.org/v3/index.json
       - name: Push Testing
         run: |
-          git --no-pager log -1 --format="%n %C(auto)%H  %ai"  >>  DRN.Framework.Testing/PackageDescription
-          dotnet pack DRN.Framework.Testing/DRN.Framework.Testing.csproj --configuration Release /p:Version=${VERSION} --no-build --output .
-          dotnet nuget push DRN.Framework.Testing.${VERSION}.nupkg --skip-duplicate --api-key ${{ secrets.NUGET_TOKEN }} --source https://api.nuget.org/v3/index.json
+          echo "ProjectName=Testing" >> $GITHUB_ENV
+          git --no-pager log -1 --format="%n %C(auto)%H  %ai"  >>  DRN.Framework.${ProjectName}/PACKAGE-DESCRIPTION
+          dotnet pack DRN.Framework.${ProjectName}/DRN.Framework.${ProjectName}.csproj --configuration Release /p:Version=${VERSION} --no-build --output .
+          dotnet nuget push DRN.Framework.${ProjectName}.${VERSION}.nupkg --skip-duplicate --api-key ${{ secrets.NUGET_TOKEN }} --source https://api.nuget.org/v3/index.json
