--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,8 +21,11 @@ jobs:
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: 7.0.x
-      - name: Set VERSION variable from tag
-        run: echo "VERSION=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_ENV
+      - name: Set COMMIT-INFO and VERSION variable from tag
+        run: |
+          COMMIT-INFO=$(git --no-pager log -1 --format="%n%nAuthor, date, commit hash:%n%an,  %ai, %C(auto)%H")
+          echo "COMMIT-INFO=${COMMIT-INFO}" >> $GITHUB_ENV
+          echo "VERSION=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_ENV
       - name: Restore dependencies
         run: dotnet restore ${SolutionName}
       - name: Build
@@ -32,20 +35,23 @@ jobs:
         env:
           ProjectName: DRN.Test
       - name: Publish SharedKernel
-        uses: ./.github/workflows/actions/nuget-publish.yml
+        uses: ./.github/workflows/actions/nuget-publish
         with:
           project-name: DRN.Framework.SharedKernel
           project-version: ${VERSION}
+          commit-info: ${COMMIT-INFO}
           token: ${{ secrets.NUGET_TOKEN }}
       - name: Publish Utils
-        uses: ./.github/workflows/actions/nuget-publish.yml
+        uses: ./.github/workflows/actions/nuget-publish
         with:
           project-name: DRN.Framework.Utils
           project-version: ${VERSION}
+          commit-info: ${COMMIT-INFO}
           token: ${{ secrets.NUGET_TOKEN }}
       - name: Publish Testing
-        uses: ./.github/workflows/actions/nuget-publish.yml
+        uses: ./.github/workflows/actions/nuget-publish
         with:
           project-name: DRN.Framework.Utils
           project-version: ${VERSION}
+          commit-info: ${COMMIT-INFO}
           token: ${{ secrets.NUGET_TOKEN }}
