--- a/.github/workflows/actions/nuget-publish/action.yml
+++ b/.github/workflows/actions/nuget-publish/action.yml
@@ -10,11 +10,13 @@ runs:
   using: "composite"
   steps:
     - name: Pack
+      shell: bash
       run: |
         git --no-pager log -1 --format="%n%nAuthor, date, commit hash:%n%an,  %ai, %C(auto)%H  >>  ${{ inputs.project-name }}/PACKAGE-DESCRIPTION
         git --no-pager log -1 --format="%n%nAuthor, date, commit hash:%n%an,  %ai, %C(auto)%H  >>  ${{ inputs.project-name }}/README.md
         git --no-pager log -1 --format="%n%nAuthor, date, commit hash:%n%an,  %ai, %C(auto)%H  >>  ${{ inputs.project-name }}/RELEASE-NOTES.md
         dotnet pack ${{ inputs.project-name }}/${{ inputs.project-name }}.csproj --configuration Release /p:Version=${{ inputs.project-version }} --no-build --output .
     - name: Push
+      shell: bash
       run: |
         dotnet nuget push ${{ inputs.project-name }}.${{ inputs.project-version }}.nupkg --skip-duplicate --api-key ${{ inputs.token }} --source https://api.nuget.org/v3/index.json
