--- a/.github/workflows/release-preview.yml
+++ b/.github/workflows/release-preview.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: 7.0.x
-      - name: Set COMMIT-INFO and VERSION variable from tag
+      - name: Set VERSION variable from tag
         run: |
           echo "VERSION=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_ENV
       - name: Restore dependencies
