--- a/.github/workflows/actions/nuget-publish/action.yml
+++ b/.github/workflows/actions/nuget-publish/action.yml
@@ -8,10 +8,9 @@ runs:
     - name: Pack
       shell: bash
       run: |
-        commitInfo=$(git --no-pager log -1 --format="  %n  %n### Commit Info  %nAuthor: %an  %nDate: %ai  %nHash: %C(auto)%H")
-        echo $commitInfo  >>  ${{ inputs.project-name }}/PACKAGE-DESCRIPTION
-        echo $commitInfo  >>  ${{ inputs.project-name }}/README.md
-        echo $commitInfo  >>  ${{ inputs.project-name }}/RELEASE-NOTES.md
+        git --no-pager log -1 --format="  %n  %n### Commit Info  %nAuthor: %an  %nDate: %ai  %nHash: %C(auto)%H"  >>  ${{ inputs.project-name }}/PACKAGE-DESCRIPTION
+        git --no-pager log -1 --format="  %n  %n### Commit Info  %nAuthor: %an  %nDate: %ai  %nHash: %C(auto)%H"  >>  ${{ inputs.project-name }}/README.md
+        git --no-pager log -1 --format="  %n  %n### Commit Info  %nAuthor: %an  %nDate: %ai  %nHash: %C(auto)%H"  >>  ${{ inputs.project-name }}/RELEASE-NOTES.md
         dotnet pack ${{ inputs.project-name }}/${{ inputs.project-name }}.csproj --configuration Release /p:Version=${VERSION} --no-build --output .
     - name: Push
       shell: bash
