--- a/DRN.Framework.Hosting/DRN.Framework.Hosting.csproj
+++ b/DRN.Framework.Hosting/DRN.Framework.Hosting.csproj
@@ -7,12 +7,18 @@
         <Authors>Duran Serkan KILIÇ</Authors>
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
         <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
+        <RazorEmbedStaticWebAssets>true</RazorEmbedStaticWebAssets>
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <PackageLicenseExpression>GPL-3.0-only</PackageLicenseExpression>
         <PackageId>DRN.Framework.Hosting</PackageId>
         <RepositoryType>git</RepositoryType>
         <RepositoryUrl>https://github.com/duranserkan/DRN-Project</RepositoryUrl>
     </PropertyGroup>
+
+    <ItemGroup>
+        <!-- Embed all wwwroot content -->
+        <EmbeddedResource Include="wwwroot\**\*" />
+    </ItemGroup>
 
     <ItemGroup>
         <None Update="README.md">
@@ -54,10 +60,5 @@
         <PackageReference Include="Serilog.Sinks.Graylog" Version="3.1.1"/>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.1" />
     </ItemGroup>
-
-    <ItemGroup>
-        <None Remove="DeveloperExceptionPage\Views\CompilationErrorPage.cshtml"/>
-    </ItemGroup>
-    
     
 </Project>
