--- a/DRN.Framework.Utils/DRN.Framework.Utils.csproj
+++ b/DRN.Framework.Utils/DRN.Framework.Utils.csproj
@@ -47,6 +47,7 @@
     <ItemGroup>
         <PackageReference Include="Blake3" Version="2.0.0"/>
         <PackageReference Include="Flurl.Http" Version="4.0.2"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.6" />
         <PackageReference Include="Microsoft.Extensions.Caching.Hybrid" Version="9.6.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.6" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.6" />
