--- a/Sample.Hosted/appsettings.Development.json
+++ b/Sample.Hosted/appsettings.Development.json
@@ -4,7 +4,7 @@
     "LaunchExternalDependencies": true,
     "UseHttpRequestLogger": true,
     "InternalRequestHttpVersion": "1.1",
-    "PrototypingMode": true
+    "PrototypingMode": false
   },
   "NexusAppSettings": {
     "Address": "localhost:5988"
